--- a/index.html
+++ b/index.html
@@ -17,17 +17,27 @@
     <header class="row justify-content-center">
         <div class="upBar d-flex justify-content-center align-items-center col-12 m-1 p-0">
             <p class="col-6 topText">Podes abonar una parte en USD y la otra en Pesos</p>
-            <div class="container row col-2">
+            <div class="container row col-2 align-items-center">
                 <p class="col-6 d-flex align-items-center justify-content-center my-3" id="userWelcome"></p>
-                <a href="./pages/login.html" id="logoUser" class="d-flex align-items-center justify-content-center fa-xl fa-regular fa-user col-2 m-3 p-3"></a>
+                <a class="col-2 fa-xl fa-regular fa-user" data-bs-toggle="collapse" href="#collapseUser" role="button" aria-expanded="false" aria-controls="collapseUser"></a>
+                <div class="row collapse containerUser" id="collapseUser">
+                    <div class="p-3 col-3 boxMenuList">
+                        <ul class="list-group menuList">
+                            <div class="boxList">
+                                <li><a class="list-group-item" href="./pages/login.html">Ingresar</a></li>
+                                <li><a class="list-group-item bajo" href="./pages/register.html">Registrarse</a></li>
+                            </div>
+                        </ul>    
+                    </div>
+                </div>
             </div>
             <a  href="#" id="sidebarCollapse" class="d-flex align-items-center justify-content-center fa-xl fa-solid fa-basket-shopping col-2" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample"></a>
         </div>
         <div class="row topNav">
             <nav class="navbar navbar-dark">
                 <div class="navigationBar row d-flex justify-content-between align-items-center container-fluid">
-                    <a  class=" col-3 logo" href="index.html"><h1>LuTech</h1></a>
-                    <input type="text" id="formulario" class="searchBar col-6 col-md-6" placeholder="Busfsdsdfsfdcar">
+                    <a  class=" col-3 logo mx-5" href="index.html"><h1>LuTech</h1></a>
+                    <input type="text" id="formulario" class="searchBar col-6 col-md-6" placeholder="Buscar">
                     <button class="col-2 navbar-toggler btnMenu" data-bs-toggle="collapse" href="#collapseMenu" role="button" aria-expanded="false" aria-controls="collapseMenu">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -48,7 +58,7 @@
         </div>
     </header>
     <main class="d-flex row align-items-center justify-content-center">
-        <div style="min-height: 120px;">
+        <div>
             <div class="collapse collapse-horizontal carrito" id="collapseWidthExample">
                 <div class="card card-body tarjeta row" style="width: 400px;">
                     <h5>Tu Carrito</h5>
@@ -62,49 +72,183 @@
                 </div>
             </div>
         </div>
-        <div class="box1 row col-3 m-3 p-3">
-            <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
-            <div class="bodyTarjeta row container">
-                <h5 class="col-12">Nintendo Switch</h5>
-                <p class="col-12">Nintendo Switch OLED 64GB Standard color rojo neón, azul neón y negro</p>
-                <p class="col-12">Valor: $465.000</p>
-                <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Agregar al Carrito</button>
+        <p class="filtroProductos mx-2">
+            <a class="btn mx-3" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Precio del Dólar hoy</a>
+            <button class="btn " type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Lista de Precios</button>
+            <button class="btn " type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">Productos</button>
+            <button class="btn " type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2 multiCollapseExample3">Mostrar Todo</button>
+        </p>
+        <div style="min-height: 41rem" class="row align-items-center justify-content-center">
+            <div class="row justify-content-center col-7 collapse multi-collapse" id="multiCollapseExample1">
+                <div class="row justify-content-center"><iframe class="dolarBox " style="width:20rem;height:18rem;border-radius:10px;box-shadow:2px 4px 4px rgb(0 0 0 / 25%);display:flex;justify-content:center;border:1px solid #bcbcbc" src="https://dolarhoy.com/i/cotizaciones/dolar-blue" frameborder="0"></iframe></div>
             </div>
-        </div>
-        <div class="box1 row col-3 m-3 p-3">
-            <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
-            <div class="bodyTarjeta row container">
-                <h5 class="col-12">Nintendo Switch</h5>
-                <p class="col-12">Nintendo Switch OLED 64GB Standard color rojo neón, azul neón y negro</p>
-                <p class="col-12">Valor: $465.000</p>
-                <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Agregar al Carrito</button>
+            <div class="row justify-content-center priceList collapse multi-collapse col-7 my-5 p-3" id="multiCollapseExample2">
+                <table>
+                    <tr>
+                        <th class="p-2">Producto</th>
+                        <th class="p-2">Valor</th>
+                    </tr>
+                    <tr>
+                        <td class="p-2">Samsung S23</td>
+                        <td class="p-2">$350 USD</td>
+                    </tr>
+                    <tr>
+                        <td class="p-2">Iphone 11 64GB</td>
+                        <td class="p-2">$450 USD</td>
+                    </tr>
+                    <tr>
+                        <td class="p-2">Iphone 12 Pro 128GB</td>
+                        <td class="p-2">$650 USD</td>
+                    </tr>
+              </table>
             </div>
-        </div>
-        <div class="box1 row col-3 m-3 p-3">
-            <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
-            <div class="bodyTarjeta row container">
-                <h5 class="col-12">Nintendo Switch</h5>
-                <p class="col-12">Nintendo Switch OLED 64GB Standard color rojo neón, azul neón y negro</p>
-                <p class="col-12">Valor: $465.000</p>
-                <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Agregar al Carrito</button>
-            </div>
-        </div>
-        <div class="box1 row col-3 m-3 p-3">
-            <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
-            <div class="bodyTarjeta row container">
-                <h5 class="col-12">Nintendo Switch</h5>
-                <p class="col-12">Nintendo Switch OLED 64GB Standard color rojo neón, azul neón y negro</p>
-                <p class="col-12">Valor: $465.000</p>
-                <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Agregar al Carrito</button>
-            </div>
-        </div>
-        <div class="box1 row col-3 m-3 p-3">
-            <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
-            <div class="bodyTarjeta row container">
-                <h5 class="col-12">Nintendo Switch</h5>
-                <p class="col-12">Nintendo Switch OLED 64GB Standard color rojo neón, azul neón y negro</p>
-                <p class="col-12">Valor: $465.000</p>
-                <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Agregar al Carrito</button>
+            <div class="row justify-content-center collapse multi-collapse" id="multiCollapseExample3">
+                <p class="filtroProductos">
+                    <a class="btn" data-bs-toggle="collapse" href="#multiCollapseExampleA" role="button" aria-expanded="false" aria-controls="multiCollapseExampleA">Iphone</a>
+                    <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExampleB" aria-expanded="false" aria-controls="multiCollapseExampleB">Consolas</button>
+                    <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse2" aria-expanded="false" aria-controls="multiCollapseExampleA multiCollapseExampleB">Mostrar Todo</button>
+                </p>
+                <div class="row justify-content-center col-7 show multi-collapse2" id="multiCollapseExampleA">
+                    <div><h2>Iphone</h2></div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 15 128GB</h5>
+                            <p class="col-12">Valor: $1020 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 15 Pro 128GB</h5>
+                            <p class="col-12">Valor: $1350 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 15 Pro 256GB</h5>
+                            <p class="col-12">Valor: $1450 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 15 Pro Max 256GB</h5>
+                            <p class="col-12">Valor: $1690 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 14 Pro Max 128GB</h5>
+                            <p class="col-12">Valor: $1160 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 14 Pro Max 256GB</h5>
+                            <p class="col-12">Valor: $1260 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 13 128GB</h5>
+                            <p class="col-12">Valor: $730 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone 11 64GB</h5>
+                            <p class="col-12">Valor: $480 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Iphone XR 64GB</h5>
+                            <p class="col-12">Valor: $390 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center col-7 collapse multi-collapse2" id="multiCollapseExampleB">
+                    <div><h2>Consolas</h2></div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">PS5 Standard</h5>
+                            <p class="col-12">Sony PlayStation 5 Edición Estandar + GOW/COD + 1 Joystick</p>
+                            <p class="col-12">Valor: $720 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Sony PS5 825GB Spiderman 2 Edition</h5>
+                            <p class="col-12">Play Station 5 Edición Spiderman + Spiderman 2 por encargue de 7 a 10 días hábiles. Abonas cuando recibís</p>
+                            <p class="col-12">Valor: $1000 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Encargar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Joystick PS5</h5>
+                            <p class="col-12">Joystick Inalámbrico Sony Playstation Dualsense Ps5 White</p>
+                            <p class="col-12">Valor: $69.000 ARS</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Nintendo Switch OLED 64GB</h5>
+                            <p class="col-12">Nintendo Switch OLED 64GB Standard White/Neón</p>
+                            <p class="col-12">Valor: $385 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Nintendo Switch OLED 64GB</h5>
+                            <p class="col-12">Nintendo Switch 64GB OLED - Splatoon 3 / Pokemon Scarlet & Violet Edition</p>
+                            <p class="col-12">Valor: $420 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Comprar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Xbox One Series X 1Tb</h5>
+                            <p class="col-12">Xbox One Series X 1Tb Black por encargue de 7 a 10 días hábiles. Abonas cuando recibís</p>
+                            <p class="col-12">Valor: $726 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Encargar</button>
+                        </div>
+                    </div>
+                    <div class="box1 row col-3 m-3 p-3">
+                        <img src="./assets/img/prueba.png" class="col-10 img-thumbnail m-2" alt="...">
+                        <div class="bodyTarjeta row container">
+                            <h5 class="col-12">Xbox One Series S 512GB Digital</h5>
+                            <p class="col-12">Xbox One Series S 512GB White Digital por encargue de 7 a 10 días hábiles. Abonas cuando recibís</p>
+                            <p class="col-12">Valor: $426 USD</p>
+                            <button class="col-8 mx-1 my-3 d-flex justify-content-center align-content-center button" id="A">Encargar</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -123,5 +267,6 @@
         <div class="col-12 col-xl-4 py-5"><h5>©2023 RF Coding, All rights reserved.</h5></div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
