--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </head>
 <body>
     <header class="row justify-content-center">
-        <div class="upBar d-flex justify-content-center col-12 m-0 p-2">
-            <p class="col-6 topText">Podes abonar una parte en USD y la otra en Pesos</p>
+        <div class="upBar d-flex justify-content-between col-12 m-0 mx-5 p-2 px-5">
+            <p class="col-6 topTextA">Podes abonar una parte en USD y la otra en Pesos</p>
+            <p class="col-3 topTextB">Envíos a Todo el País!</p>
         </div>
         <div class="row topNav">
             <nav class="navbar navbar-dark">
@@ -44,8 +45,8 @@
             </div>
             <div class="row justify-content-center collapse multi-collapse" id="multiCollapseExample3">
                 <p class="filtroProductos">
-                    <a class="btn" data-bs-toggle="collapse" href="#multiCollapseExampleA" role="button" aria-expanded="false" aria-controls="multiCollapseExampleA" id="iphone">Iphone</a>
-                    <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExampleB" aria-expanded="false" aria-controls="multiCollapseExampleB" id="consola">Consolas</button>
+                    <a class="btn" data-bs-toggle="collapse" href="#multiCollapseExampleA" role="button" aria-expanded="false" aria-controls="multiCollapseExampleA" style="background-color: #187178;" id="iphone">Iphone</a>
+                    <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExampleB" aria-expanded="false" aria-controls="multiCollapseExampleB" style="background-color: #187178;" id="consola">Consolas</button>
                     <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse2" aria-expanded="false" aria-controls="multiCollapseExampleA multiCollapseExampleB" id="todo"">Todo</button>
                 </p>
                 <div class="row d-flex col-12 justify-content-center" id="contenedorProductos"></div>
@@ -55,12 +56,12 @@
     <footer class="row container-fluid text-center d-flex align-items-center justify-content-center">
         <div class="row my-4 col-12 col-xl-4">
             <a href="#" class="col-12">Como Comprar</a>
-            <a href="./pages/contact.html" class="col-12">Contacto</a>
+            <a href="https://wa.me/1165640811?" class="col-12">Contacto</a>
             <a href="./pages/aboutUs.html" class="col-12">Quienes Somos</a>
         </div>
         <div class="row my-4 col-12 col-xl-4 redes">
                 <a href="https://www.instagram.com/tecnolu.arg" target="_blank" class="fa-brands fa-instagram fa-2xl ig col-3"></a>
-                <a href="https://wa.me/1156634529?" target="_blank" class="fa-brands fa-whatsapp fa-2xl fb col-3"></a>
+                <a href="https://wa.me/1165640811?" target="_blank" class="fa-brands fa-whatsapp fa-2xl fb col-3"></a>
                 <a href="https://www.youtube.com" target="_blank" class="fa-brands fa-youtube fa-2xl Yt col-3"></a>
                 <a href="https://www.gmail.com" target="_blank" class="fa-solid fa-envelope fa-2xl gmail col-3"></a>
         </div>
