--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <header class="row justify-content-center">
-        <div class="upBar d-flex justify-content-between col-12 m-0 mx-5 p-2 px-5">
-            <p class="col-6 topTextA">Podes abonar una parte en USD y la otra en Pesos</p>
-            <p class="col-3 topTextB">Envíos a Todo el País!</p>
+        <div class="upBar row d-flex justify-content-between col-12 m-0 mx-5 p-2 px-5">
+            <p class="col-12 col-md-10 topTextA">Podes abonar una parte en USD y la otra en Pesos</p>
+            <p class="col-12 col-md-10 topTextB">Envíos a Todo el País!</p>
         </div>
         <div class="row topNav">
             <nav class="navbar navbar-dark">
