--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <footer class="row container-fluid text-center d-flex align-items-center justify-content-center">
         <div class="row my-4 col-12 col-xl-4">
             <a href="#" class="col-12">Como Comprar</a>
-            <a href="https://wa.me/1165640811?" class="col-12">Contacto</a>
-            <a href="./pages/aboutUs.html" class="col-12">Quienes Somos</a>
+            <a href="https://wa.me/5401165640811" class="col-12">Contacto</a>
+            <a href="https://www.instagram.com/tecnolu.arg" class="col-12">Quienes Somos</a>
         </div>
         <div class="row my-4 col-12 col-xl-4 redes">
                 <a href="https://www.instagram.com/tecnolu.arg" target="_blank" class="fa-brands fa-instagram fa-2xl ig col-3"></a>
-                <a href="https://wa.me/1165640811?" target="_blank" class="fa-brands fa-whatsapp fa-2xl fb col-3"></a>
+                <a href="https://wa.me/5401165640811" target="_blank" class="fa-brands fa-whatsapp fa-2xl fb col-3"></a>
                 <a href="https://www.youtube.com" target="_blank" class="fa-brands fa-youtube fa-2xl Yt col-3"></a>
                 <a href="https://www.gmail.com" target="_blank" class="fa-solid fa-envelope fa-2xl gmail col-3"></a>
         </div>
